fix: make navbar fixed and logo smaller on mobile view.

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@ body {
 
 header {
   background-color: #fff;
+  position: fixed;
+  width: 100%;
 }
 
 header .container {
@@ -54,7 +56,7 @@ header a {
 
 .pages {
   max-width: 1400px;
-  padding: 20px;
+  padding: 95px 20px 20px 20px;
   margin: 0 auto;
 }
 
@@ -110,5 +112,9 @@ header a {
 @media (max-width: 375px) {
   .home {
     grid-template-columns: 1fr;
+  }
+
+  header h1 {
+    font-size: 20px;
   }
 }
